--- a/www/app/products/products.html
+++ b/www/app/products/products.html
@@ -1,12 +1,16 @@
 <ion-view view-title="Products" ng-controller="ProductsCtrl as vm">
   <ion-content on-swipe-up="vm.onSwipeUp()">
-    <h1 style="text-align: center;margin-bottom:40px;">Products</h1>
-		<ion-slide-box on-slide-changed="slideHasChanged($index)" active-slide="vm.currentProduct" style="margin-bottom:50px;">
-		  <ion-slide ng-repeat="product in vm.products" >
-		  	<div style="text-align:center;">{{product.name}}</div>
-		    <img style="height:300px;width: 100%;" src="{{product.image}}"/>
+		<ion-slide-box style="z-index:-1" on-slide-changed="slideHasChanged($index)" active-slide="vm.currentProduct">
+		  <ion-slide ng-repeat="product in vm.products">
+		  	<div class="product-desc-container">
+			    <div class="big-header">#CoffeeMorning</div>
+			  	<div class="small-header">#lattenails #fallstyle #autum</div>
+			  	<div class="product-description">this is an example of a product description that has three line items</div>
+		  	</div>
+		  	<div></div>
+		  	<img style="width:100%;height:100%;" src="{{product.image}}"/>
 		  </ion-slide>
 		</ion-slide-box>
-		<button ng-click="vm.bookAppointment()" style="margin:auto;display:block;">Book Appointment</button>
+		<button class="primary-button" ng-click="vm.bookAppointment()" style="position:relative;top:-10px;">Book Appointment</button>
   </ion-content>
 </ion-view>
