--- a/www/app/products/products.html
+++ b/www/app/products/products.html
@@ -1,16 +1,17 @@
 <ion-view view-title="Products" ng-controller="ProductsCtrl as vm">
   <ion-content on-swipe-up="vm.onSwipeUp()">
 		<ion-slide-box style="z-index:-1" on-slide-changed="slideHasChanged($index)" active-slide="vm.currentProduct">
-		  <ion-slide ng-repeat="product in vm.products">
+		  <ion-slide ng-repeat="product in vm.products" style="height:100%">
 		  	<div class="product-desc-container">
 			    <div class="big-header">#CoffeeMorning</div>
 			  	<div class="small-header">#lattenails #fallstyle #autum</div>
 			  	<div class="product-description">this is an example of a product description that has three line items</div>
 		  	</div>
-		  	<div></div>
-		  	<img style="width:100%;height:100%;" src="{{product.image}}"/>
+		  	<div>
+		  	</div>
+		  	<div class="fullscreen-image" ng-style="{'background-image':'url({{product.image}})'}">
 		  </ion-slide>
 		</ion-slide-box>
-		<button class="primary-button" ng-click="vm.bookAppointment()" style="position:relative;top:-10px;">Book Appointment</button>
+		<button class="primary-button" ng-click="vm.bookAppointment()" style="position:absolute;top:90%;">Book</button>
   </ion-content>
 </ion-view>
