add price deadline info

--- a/www/app/products/products.html
+++ b/www/app/products/products.html
@@ -7,7 +7,13 @@
 			  	<div class="small-header">#lattenails #fallstyle #autum</div>
 			  	<div class="product-description">this is an example of a product description that has three line items</div>
 		  	</div>
-		  	<div>
+		  	<div class="price-deadline-container">
+				<div class="price-container">
+				  		<div style="float:left;width:20px;">$</div>
+						<div style="float:left;width:70px">100</div>
+				  	</div>
+				 <div class="deadline-msg">last chance to book this style in 3 days</div>
+				 <button class="arrow-btn ion-ios-arrow-down"></button>
 		  	</div>
 		  	<div class="fullscreen-image" ng-style="{'background-image':'url({{product.image}})'}">
 		  </ion-slide>
