--- a/www/index.html
+++ b/www/index.html
@@ -17,6 +17,11 @@
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
+
+    <!-- 3rd party libraries -->
+    <script src="lib/moment/min/moment-with-locales.min.js"></script>
+
+
     <!-- Firebase -->
     <script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
     <!-- AngularFire -->
@@ -36,6 +41,8 @@
     <!-- constants -->
     <script src="app/shared/constants.js"></script>
 
+    <!-- services -->
+    <script src="app/shared/services/user-selection-service.js"></script>    
 
   </head>
   <body ng-app="nailArtist">
