add confirm button to product details page and make it stick

--- a/www/app/productDetails/product-details.html
+++ b/www/app/productDetails/product-details.html
@@ -21,4 +21,5 @@
     	</div>
     </div>
   </ion-content>
+      <button id="product-details-confirm-btn" class="primary-button" ng-click="vm.bookAppointment()">Confirm for ${{vm.product.price}}</button>
 </ion-view>
