add instagram small icon to product deatils page

--- a/www/app/productDetails/product-details.html
+++ b/www/app/productDetails/product-details.html
@@ -10,6 +10,7 @@
     	<div class="image-container" ng-style="{'background-image':'url({{instagram.image}})'}">
     		<div class="user-info-container">
     			<div class="user-profile-image">
+    				<div class="img-small-circle" ></div>
     				<div class="img-circle" ng-style="{'background-image':'url({{instagram.author.profileImage}})'}"></div>
     			</div>
     			<div class="user-name">{{instagram.author.name}}</div>
