build booking completion page

--- a/www/app/productDetails/product-details.html
+++ b/www/app/productDetails/product-details.html
@@ -2,7 +2,7 @@
   <ion-content>
 	<div class="product-info-container">
 		<div class="product-text-container">
-			<div class="product-name">#CoffeeMorning</div>
+			<div class="product-name">{{vm.product.name}}</div>
 			<div class="product-hashtags">#lattenails #autum #fallfashion</div>
 		</div>
 	</div>
@@ -10,7 +10,7 @@
     	<div class="image-container" ng-style="{'background-image':'url({{instagram.image}})'}">
     		<div class="user-info-container">
     			<div class="user-profile-image">
-    				<div class="img-small-circle" ></div>
+    				<div class="img-small-circle" ng-style="{'background-image':'url({{instagram.author.profileImage}})'}"></div>
     				<div class="img-circle" ng-style="{'background-image':'url({{instagram.author.profileImage}})'}"></div>
     			</div>
     			<div class="user-name">{{instagram.author.name}}</div>
