--- a/www/index.html
+++ b/www/index.html
@@ -38,6 +38,9 @@
     <!-- bookings -->
     <script src="app/bookings/bookings-ctrl.js"></script>
 
+    <!-- complete -->
+    <script src="app/complete/complete-ctrl.js"></script>    
+
     <!-- constants -->
     <script src="app/shared/constants.js"></script>
 
