--- a/www/index.html
+++ b/www/index.html
@@ -46,6 +46,12 @@
 
     <!-- services -->
     <script src="app/shared/services/user-selection-service.js"></script>    
+    <script src="app/shared/services/local-storage-service.js"></script>    
+    <script src="app/shared/services/transformer-service.js"></script>    
+
+    <!-- models -->
+    <script src="app/shared/models/User.js"></script>
+    <script src="app/shared/models/Address.js"></script>
 
   </head>
   <body ng-app="nailArtist">
