--- a/www/app/bookings/bookings.html
+++ b/www/app/bookings/bookings.html
@@ -9,13 +9,13 @@
   	<div class="booking-container" ng-hide="!vm.showBookingContainer">
   		<div class="date-container" style="opacity:1">
   			<div class="booking-sub-header">Pick a date and time</div>
-	  		<ion-scroll direction="x" class="wide-as-needed date-time-selector" >
+	  		<ion-scroll direction="x" class="date-time-selector" >
 				<button ng-repeat="date in vm.schedule" ng-class="{active: date.$id === vm.selectedDate}" ng-click="vm.selectDate(date)">
 					<div id="day-of-week">{{date.dayOfWeek}}</div>
 					<div id="month-day">{{date.monthDay}}</div>
 				</button>	
 		    </ion-scroll>
-		    <ion-scroll direction="x" class="wide-as-needed date-time-selector">
+		    <ion-scroll direction="x" class="date-time-selector">
 				<button ng-repeat="time in vm.times" ng-class="{active: time === vm.selectedTime}" ng-click="vm.selectTime(time)">
 					<div id="time-of-day">{{time}}</div>
 				</button>	
@@ -28,15 +28,18 @@
   		<div class="address-selector">
 			<button class="address-btn" ng-class="{active: vm.user.addresses.home === vm.selectedAddress}" ng-click="vm.selectAddress(vm.user.addresses.home)">
 				<div class="address-type">Home</div>
-				<div class="address-text">{{vm.user.addresses.home.street}}</div>
+				<div class="address-text" ng-show="vm.user.addresses.home.street">{{vm.user.addresses.home.street}}</div>
+				<div class="address-text-placeholder" ng-show="!vm.user.addresses.home.street">Add location</div>
 			</button>	
 			<button class="address-btn" ng-class="{active: vm.user.addresses.work === vm.selectedAddress}" ng-click="vm.selectAddress(vm.user.addresses.work)">
 				<div class="address-type">Work</div>
-				<div class="address-text">{{vm.user.addresses.work.street}}</div>
+				<div class="address-text" ng-show="vm.user.addresses.work.street">{{vm.user.addresses.work.street}}</div>
+				<div class="address-text-placeholder" ng-show="!vm.user.addresses.work.street">Add location</div>
 			</button>	
 			<button class="address-btn" ng-class="{active: vm.user.addresses.custom === vm.selectedAddress}" ng-click="vm.selectAddress(vm.user.addresses.custom)">
 				<div class="address-type">Custom</div>
-				<div class="address-text">{{vm.user.addresses.custom.street}}</div>
+				<div class="address-text" ng-show="vm.user.addresses.custom.street">{{vm.user.addresses.custom.street}}</div>
+				<div class="address-text-placeholder" ng-show="!vm.user.addresses.custom.street">Add location</div>
 			</button>	
   		</div>
   		<button id="booking-confirm-btn" class="primary-button" ng-click="vm.bookAppointment()">Confirm for ${{vm.product.price}}</button>
