--- a/www/app/bookings/modals/edit-address-modal.html
+++ b/www/app/bookings/modals/edit-address-modal.html
@@ -1,7 +1,7 @@
 <div class="edit-address-container">
 	<div id="add-address-title">Add your address</div>
-    <input class="edit-address" placeholder="Street Address" type="text" ng-model="vm.selectedAddress.street"/>        
-    <input class="edit-address" placeholder="City" type="text" ng-model="vm.selectedAddress.city"/>
+    <input class="user-text-input" placeholder="Street Address" type="text" ng-model="vm.selectedAddress.street"/>        
+    <input class="user-text-input" placeholder="City" type="text" ng-model="vm.selectedAddress.city"/>
 	<div class="state-zip-container">
 		<input class="edit-state" placeholder="State" ng-model="vm.selectedAddress.state" type="text"/>
 		<input class="edit-zipcode" placeholder="ZIP" ng-model="vm.selectedAddress.zipCode" type="text"/>
