add contact us page

--- a/www/index.html
+++ b/www/index.html
@@ -41,6 +41,9 @@
     <!-- complete -->
     <script src="app/complete/complete-ctrl.js"></script>    
 
+    <!-- contact us -->
+    <script src="app/contactUs/contact-us-ctrl.js"></script>    
+
     <!-- constants -->
     <script src="app/shared/constants.js"></script>
 
