--- a/www/index.html
+++ b/www/index.html
@@ -20,6 +20,7 @@
 
     <!-- 3rd party libraries -->
     <script src="lib/moment/min/moment-with-locales.min.js"></script>
+    <script src="https://checkout.stripe.com/checkout.js"></script>    
 
 
     <!-- Firebase -->
@@ -51,6 +52,7 @@
     <script src="app/shared/services/user-selection-service.js"></script>    
     <script src="app/shared/services/local-storage-service.js"></script>    
     <script src="app/shared/services/transformer-service.js"></script>    
+    <script src="app/shared/services/stripe-service.js"></script>    
 
     <!-- models -->
     <script src="app/shared/models/User.js"></script>
