--- a/www/index.html
+++ b/www/index.html
@@ -57,6 +57,8 @@
     <!-- models -->
     <script src="app/shared/models/User.js"></script>
     <script src="app/shared/models/Address.js"></script>
+    <script src="app/shared/models/Appointment.js"></script>
+    <script src="app/shared/models/Schedule.js"></script>
 
   </head>
   <body ng-app="nailArtist">
