add booking via firebase

--- a/www/index.html
+++ b/www/index.html
@@ -53,6 +53,7 @@
     <script src="app/shared/services/local-storage-service.js"></script>    
     <script src="app/shared/services/transformer-service.js"></script>    
     <script src="app/shared/services/stripe-service.js"></script>    
+    <script src="app/shared/services/firebase-service.js"></script>    
 
     <!-- models -->
     <script src="app/shared/models/User.js"></script>
