add settings page and modals

--- a/www/index.html
+++ b/www/index.html
@@ -45,6 +45,9 @@
     <!-- contact us -->
     <script src="app/contactUs/contact-us-ctrl.js"></script>    
 
+    <!-- settings -->
+    <script src="app/settings/settings-ctrl.js"></script>    
+
     <!-- constants -->
     <script src="app/shared/constants.js"></script>
 
