--- a/www/app/products/products.html
+++ b/www/app/products/products.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Products" ng-controller="ProductsCtrl as vm">
   <ion-content on-swipe-up="vm.toProductDetails()">
-		<ion-slide-box style="z-index:-1" on-slide-changed="slideHasChanged($index)" active-slide="vm.currentProduct">
+		<ion-slide-box on-slide-changed="slideHasChanged($index)" active-slide="vm.currentProduct">
 		  <ion-slide ng-repeat="product in vm.products" style="height:100%">
 		  	<div class="product-desc-container">
 			    <div class="big-header">{{product.name}}</div>
@@ -18,6 +18,7 @@
 		  	<div class="fullscreen-image" ng-style="{'background-image':'url({{product.image}})'}">
 		  </ion-slide>
 		</ion-slide-box>
+		<button class="hamburger ion-navicon-round" ng-click="vm.toSettings()"></button>
 		<button id="products-booking-btn" class="primary-button" ng-click="vm.bookAppointment()">Book</button>
   </ion-content>
 </ion-view>
