--- a/www/app/settings/settings.html
+++ b/www/app/settings/settings.html
@@ -1,10 +1,11 @@
-<ion-view view-title="Settings" ng-controller="SettingsCtrl as vm">
-  <div class="settings-header">
-    <div class="settings-header-btn"></div>
-    <div class="settings-header-text">{{vm.user.name}}</div>
-  </div>
+<ion-view view-title="{{vm.user.name}}" ng-controller="SettingsCtrl as vm">
+  <ion-nav-bar>
+ <ion-nav-back-button class="button-clear" ng-click="vm.goBack()">
+    <i class="ion-arrow-left-c"></i> Back
+  </ion-nav-back-button>
+</ion-nav-bar>
   <ion-content>
-  <div class="list" style="padding-top:50px;padding-bottom:50px;">
+  <div class="list" style="padding-bottom:50px;">
     <div class="item item-divider settings-label">Home Address</div>
     <a class="item item-icon-right" ng-click="vm.editAddress('home')">
       <div class="address-settings">
