--- a/www/app/bookings/bookings.html
+++ b/www/app/bookings/bookings.html
@@ -9,13 +9,13 @@
   	<div class="booking-container" ng-hide="!vm.showBookingContainer">
   		<div class="date-container" style="opacity:1">
   			<div class="booking-sub-header">Pick a date and time</div>
-	  		<ion-scroll direction="x" class="date-time-selector" >
+	  		<ion-scroll direction="x" class="wide-as-needed date-time-selector" >
 				<button ng-repeat="date in vm.schedule" ng-class="{active: date.$id === vm.selectedDate}" ng-click="vm.selectDate(date)">
 					<div id="day-of-week">{{date.dayOfWeek}}</div>
 					<div id="month-day">{{date.monthDay}}</div>
 				</button>	
 		    </ion-scroll>
-		    <ion-scroll direction="x" class="date-time-selector">
+		    <ion-scroll direction="x" class="wide-as-needed date-time-selector">
 				<button ng-repeat="time in vm.times" ng-class="{active: time === vm.selectedTime}" ng-click="vm.selectTime(time)">
 					<div id="time-of-day">{{time}}</div>
 				</button>	
