add settings icon to products and bookings page

--- a/www/app/bookings/bookings.html
+++ b/www/app/bookings/bookings.html
@@ -39,5 +39,6 @@
   		</div>
   		<button id="booking-confirm-btn" class="primary-button" ng-click="vm.bookAppointment()">Confirm for ${{vm.product.price}}</button>
     </div>
+    <button class="nav-settings-btn" ng-click="vm.toSettings()"></button>
   </ion-content>
 </ion-view>
