--- a/www/app/productDetails/product-details.html
+++ b/www/app/productDetails/product-details.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Details" ng-controller="ProductDetailsCtrl as vm">
-  <ion-content on-swipe-down="vm.toProducts()">>
+  <ion-content on-swipe-down="vm.toProducts()">
 	<div class="product-info-container">
 		<div class="product-text-container">
 			<div class="product-name">{{vm.product.name}}</div>
