--- a/www/app/products/products.html
+++ b/www/app/products/products.html
@@ -18,7 +18,7 @@
 		  	<div class="fullscreen-image" ng-style="{'background-image':'url({{product.image}})'}">
 		  </ion-slide>
 		</ion-slide-box>
-		<button class="hamburger ion-navicon-round" ng-click="vm.toSettings()"></button>
+		<button class="nav-settings-btn" ng-click="vm.toSettings()"></button>
 		<button id="products-booking-btn" class="primary-button" ng-click="vm.bookAppointment()">Book</button>
   </ion-content>
 </ion-view>
