--- a/www/app/settings/modals/settings-email-modal.html
+++ b/www/app/settings/modals/settings-email-modal.html
@@ -6,7 +6,7 @@
 	  <div class="list">
 	    <label class="item item-input">
 	      <span class="input-label">Email</span>
-	      <input type="text" ng-model="vm.user.email">
+	      <input type="email" ng-model="vm.user.email">
 	    </label>
 	  </div>
 
