--- a/www/app/settings/modals/settings-phone-number-modal.html
+++ b/www/app/settings/modals/settings-phone-number-modal.html
@@ -6,7 +6,7 @@
 	  <div class="list">
 	    <label class="item item-input">
 	      <span class="input-label">Phone Number</span>
-	      <input type="text" ng-model="vm.user.phoneNumber">
+	      <input type="tel" ng-model="vm.user.phoneNumber">
 	    </label>
 	  </div>
 	  <button class="button button-full settings-btn-positive" ng-click="editPhoneNumberModal.done()">Done</button>
