store existing appointments to decide what to display on products page

--- a/www/app/complete/complete.html
+++ b/www/app/complete/complete.html
@@ -14,14 +14,14 @@
 			</div>
 	  	</div>
 
-	  	<div id="appt-info-container" ng-if="vm.bookingComplete">
+<!-- 	  	<div id="appt-info-container" ng-if="vm.bookingComplete">
 			<div id="appt-schedule-container">
 					<div id="appt-schedule-icon" class="status-icon-circle" style="background-image:url('../img/icon_success@3x.png')"></div>
 			  		<div id="scheduled-for-msg">You are scheduled for</div>
 					<div id="appt-date-time">Today at 10:30am</div>
 			  	</div>
 			 <div id="appt-address">12000 Sunridge Dr. #520</div>
-	  	</div>
+	  	</div> -->
 	  	<div class="fullscreen-image" ng-style="{'background-image':'url({{vm.product.image}})'}">
   </ion-content>
 </ion-view>
