--- a/www/app/settings/settings.html
+++ b/www/app/settings/settings.html
@@ -45,7 +45,7 @@
       </a>  
   </div>
   </ion-content>
-  <div class="settings-footer">
+  <div class="settings-footer" ng-click="vm.toContactUs()">
     <div class="settings-footer-text">Contact Us</div>
     <div class="settings-footer-btn"></div>
   </div>
