--- a/www/app/complete/modals/appt-confirmed-modal.html
+++ b/www/app/complete/modals/appt-confirmed-modal.html
@@ -1,7 +1,7 @@
 <div id="appt-confirmed-modal" class="complete-page-modal">
-	<div class="status-icon-circle" style="background-image:url('../img/icon_success@3x.png')"></div>
+	<div class="status-icon-circle" style="background-image:url('../img/icon_check@3x.png')"></div>
 	<div class="complete-modal-title">Thank You So Much!</div>
 	<div class="complete-modal-description">Your appointment is confirmed. If you need to make changes or have questions, contact us.</div>
-    <button class="primary-button" ng-click="apptConfirmedModal.contactUs()">Contact Us</button>
-    <button id="close-appt-btn" class="primary-button" ng-click="apptConfirmedModal.close()">Close</button>
+    <button id="appt-confirm-contact-us-btn" class="primary-button" ng-click="apptConfirmedModal.contactUs()">Contact Us</button>
+    <button id="close-appt-btn" class="primary-button" ng-click="vm.closeEditAddress()">Close</button>
 </div>
