--- a/www/app/contactUs/contact-us.html
+++ b/www/app/contactUs/contact-us.html
@@ -1,6 +1,11 @@
-<ion-view view-title="ContactUs" ng-controller="ContactUsCtrl as vm">
-  <ion-content >
-	  	<div class="fullscreen-image blurry" ng-style="{'background-image':'url({{vm.product.image}})'}">
+<ion-view view-title="Contact Us" ng-controller="ContactUsCtrl as vm">
+	  <ion-nav-bar>
+	 <ion-nav-back-button class="button-clear">
+	    <i class="ion-arrow-left-c"></i> Back
+	  </ion-nav-back-button>
+	</ion-nav-bar>
+	<ion-content >
+	<div class="fullscreen-image blurry" ng-style="{'background-image':'url({{vm.product.image}})'}">
 		<div id="contact-us-modal" class="complete-page-modal">
 			<div class="status-icon-circle" style="background-image:url('../img/icon_contact_us@3x.png')"></div>
 			<div class="complete-modal-title">Your satisfaction is our priority</div>
@@ -8,5 +13,5 @@
 		</div>
 		<button id="call-btn" class="primary-button"><a href="tel: 110">Call</a></button>
 		<button id="email-btn" class="primary-button" ng-click="vm.email()">Email</button>
-  </ion-content>
+	</ion-content>
 </ion-view>
