update back button styles for contact and settings pages

--- a/www/app/contactUs/contact-us.html
+++ b/www/app/contactUs/contact-us.html
@@ -1,9 +1,8 @@
-<ion-view view-title="Contact Us" ng-controller="ContactUsCtrl as vm">
-	  <ion-nav-bar>
-	 <ion-nav-back-button class="button-clear">
-	    <i class="ion-arrow-left-c"></i> Back
-	  </ion-nav-back-button>
-	</ion-nav-bar>
+<ion-view ng-controller="ContactUsCtrl as vm">
+<ion-nav-bar>
+  <ion-nav-back-button class="button-clear">Contact Us
+  </ion-nav-back-button>
+</ion-nav-bar>
 	<ion-content >
 	<div class="fullscreen-image blurry" ng-style="{'background-image':'url({{vm.product.image}})'}">
 		<div id="contact-us-modal" class="complete-page-modal">
