--- a/www/app/complete/modals/appt-confirmed-modal.html
+++ b/www/app/complete/modals/appt-confirmed-modal.html
@@ -3,5 +3,5 @@
 	<div class="complete-modal-title">Thank You So Much!</div>
 	<div class="complete-modal-description">Your appointment is confirmed. If you need to make changes or have questions, contact us.</div>
     <button id="appt-confirm-contact-us-btn" class="primary-button" ng-click="apptConfirmedModal.contactUs()">Contact Us</button>
-    <button id="close-appt-btn" class="primary-button" ng-click="vm.closeEditAddress()">Close</button>
+    <button id="close-appt-btn" class="primary-button" ng-click="apptConfirmedModal.close()">Close</button>
 </div>
