--- a/www/app/contactUs/contact-us.html
+++ b/www/app/contactUs/contact-us.html
@@ -1,6 +1,7 @@
 <ion-view ng-controller="ContactUsCtrl as vm">
 <ion-nav-bar>
-  <ion-nav-back-button class="button-clear">Contact Us
+  <ion-nav-back-button class="button-clear">
+      <i class="ion-ios-arrow-back"></i> Contact Us
   </ion-nav-back-button>
 </ion-nav-bar>
 	<ion-content >
@@ -10,7 +11,7 @@
 			<div class="complete-modal-title">Your satisfaction is our priority</div>
 			<div class="complete-modal-description">We love to get your feedback. Please feel free to contact us via phone or email</div>
 		</div>
-		<button id="call-btn" class="primary-button"><a href="tel: 110">Call</a></button>
+		<a id="call-btn" class="primary-button" href="tel: 110">Call</a>
 		<button id="email-btn" class="primary-button" ng-click="vm.email()">Email</button>
 	</ion-content>
 </ion-view>
