--- a/www/app/complete/modals/name-number-modal.html
+++ b/www/app/complete/modals/name-number-modal.html
@@ -1,5 +1,5 @@
 <div class="complete-page-modal">
-	<div class="status-icon-circle" style="background-image:url('../img/icon_success@3x.png')"></div>
+	<div class="status-icon-circle" style="background-image:url('../img/icon_check@3x.png')"></div>
 	<div class="complete-modal-title">Payment Processing</div>
 	<div class="complete-modal-description">Before you go, we need to get your name and phone number so we can contact you for your appointment</div>
     <input class="name-number-input user-text-input" placeholder="First and Last Name" type="text" ng-model="vm.user.name"/>        
