--- a/www/index.html
+++ b/www/index.html
@@ -23,7 +23,8 @@
     <!-- 3rd party libraries -->
     <script src="lib/moment/min/moment-with-locales.min.js"></script>
     <script src="https://checkout.stripe.com/checkout.js"></script>    
-
+    <script src="lib/angular-twilio/angular-twilio.js"></script>
+    <script src="lib/angular-twilio-verification/angular-twilio-verification.js"></script>
 
     <!-- Firebase -->
     <script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
