--- a/www/app/settings/modals/settings-email-modal.html
+++ b/www/app/settings/modals/settings-email-modal.html
@@ -1,4 +1,4 @@
-<ion-modal-view>
+<ion-modal-view style="height:200px;width:300px;">
 	<ion-header-bar>
 	  <h1 class="title">Edit Email</h1>
 	</ion-header-bar>
