add bottom margin for product details page, make product info on the top fixed position so won't scroll

--- a/www/app/bookings/modals/edit-address-modal.html
+++ b/www/app/bookings/modals/edit-address-modal.html
@@ -1,4 +1,4 @@
-<div class="edit-address-container">
+<div class="edit-address-container" ng-click="$event.stopPropagation()" ng-show="!vm.showBookingContainer">
 	<div id="add-address-title">Add your address</div>
     <input class="user-text-input" placeholder="Street Address" type="text" ng-model="vm.selectedAddress.street"/>        
     <input class="user-text-input" placeholder="City" type="text" ng-model="vm.selectedAddress.city"/>
