--- a/www/app/productDetails/product-details.html
+++ b/www/app/productDetails/product-details.html
@@ -1,11 +1,11 @@
 <ion-view view-title="Details" ng-controller="ProductDetailsCtrl as vm">
-  <ion-content on-swipe-down="vm.toProducts()">
-	<div class="product-info-container">
-		<div class="product-text-container">
-			<div class="product-name">{{vm.product.name}}</div>
-			<div class="product-hashtags">#lattenails #autum #fallfashion</div>
-		</div>
-	</div>
+    <div class="product-info-container">
+        <div class="product-text-container">
+            <div class="product-name">{{vm.product.name}}</div>
+            <div class="product-hashtags">{{vm.product.hashtags}}</div>
+        </div>
+    </div>
+  <ion-content style="margin-bottom:50px;" on-swipe-down="vm.toProducts()">
     <div class="instagram-container" ng-repeat="instagram in vm.instagrams">
     	<div class="image-container" ng-style="{'background-image':'url({{instagram.image}})'}">
     		<div class="user-info-container">
