--- a/www/index.html
+++ b/www/index.html
@@ -60,6 +60,7 @@
     <script src="app/shared/services/transformer-service.js"></script>    
     <script src="app/shared/services/stripe-service.js"></script>    
     <script src="app/shared/services/firebase-service.js"></script>    
+    <script src="app/shared/services/validators/address-validator-service.js"></script>    
 
     <!-- models -->
     <script src="app/shared/models/User.js"></script>
