--- a/www/app/complete/modals/confirm-phone-modal.html
+++ b/www/app/complete/modals/confirm-phone-modal.html
@@ -3,7 +3,7 @@
 	<div class="status-icon-circle" ng-show="confirmPhoneModal.wrongCode " style="background-image:url('../img/icon_error@3x.png')"></div>
 	<div class="complete-modal-title">{{confirmPhoneModal.wrongCode ? "Oops, wrong code" : "Confirm Phone Number"}}</div>
 	<div class="complete-modal-description">{{confirmPhoneModal.wrongCode ? "The code that was entered did not match the one we sent. Please try again." : "In a moment, you will receive a 5-digit confirmation code. Please enter it below to confirm your phone number."}}</div>
-	<input id="security-code-input" type="text" ng-model="confirmPhoneModal.securityCode"></input>
+	<input id="security-code-input" type="number" pattern="\d*" ng-model="confirmPhoneModal.securityCode"></input>
 	<div id="confirm-phone-sent-to">Sent to {{vm.user.phoneNumber}}</div>
     <div class="resend-code-link" ng-click="confirmPhoneModal.resend()">I didn't get it, try again</div>
     <button class="primary-button" ng-click="confirmPhoneModal.confirm()">Confirm</button>
