--- a/www/app/complete/modals/name-number-modal.html
+++ b/www/app/complete/modals/name-number-modal.html
@@ -3,6 +3,6 @@
 	<div class="complete-modal-title">Payment Processing</div>
 	<div class="complete-modal-description">Before you go, we need to get your name and phone number so we can contact you for your appointment</div>
     <input class="name-number-input user-text-input" placeholder="First and Last Name" type="text" ng-model="vm.user.name"/>        
-    <input class="name-number-input user-text-input" placeholder="Phone Number" type="text" ng-model="vm.user.phoneNumber"/>
+    <input class="name-number-input user-text-input" type="number" pattern="\d*" placeholder="Phone Number" type="text" ng-model="vm.user.phoneNumber"/>
     <button class="primary-button" ng-click="nameNumberModal.done()">Done</button>
 </div>
