add privacy/cancellation policies popups in settings page. add background blurring to booking modals

--- a/www/app/complete/complete.html
+++ b/www/app/complete/complete.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Complete" ng-controller="CompleteCtrl as vm">
-  <ion-content>
+  <ion-content class="blur-fullscreen">
 	  	<div class="product-desc-container">
 		    <div class="big-header">{{vm.product.name}}</div>
 		  	<div class="small-header">#lattenails #fallstyle #autum</div>
@@ -13,10 +13,6 @@
 				<button class="dismiss-btn">Dismiss</button>
 			</div>
 	  	</div>
-
-		<div id="confirm-phone-number">
-			
-		</div>
 	  	<div class="fullscreen-image" ng-style="{'background-image':'url({{vm.product.image}})'}">
   </ion-content>
 </ion-view>
