--- a/www/app/products/products.html
+++ b/www/app/products/products.html
@@ -4,7 +4,7 @@
 		  <ion-slide ng-repeat="product in vm.products" style="height:100%">
 		  	<div class="product-desc-container">
 			    <div class="big-header">{{product.name}}</div>
-			  	<div class="small-header">#lattenails #fallstyle #autum</div>
+			  	<div class="small-header">{{product.hashtags}}</div>
 			  	<div class="product-description">{{product.description}}</div>
 		  	</div>
 		  	<div id="appt-info-container" ng-show="product.appointment">
