--- a/www/index.html
+++ b/www/index.html
@@ -53,6 +53,7 @@
 
     <!-- constants -->
     <script src="app/shared/constants.js"></script>
+    <script src="app/shared/policies.js"></script>
 
     <!-- services -->
     <script src="app/shared/services/user-selection-service.js"></script>    
