--- a/www/app/settings/settings.html
+++ b/www/app/settings/settings.html
@@ -5,7 +5,7 @@
   </ion-nav-back-button>
 </ion-nav-bar>
   <ion-content>
-  <div class="list" style="padding-bottom:50px;">
+  <div class="list">
     <div class="item item-divider settings-label">Home Address</div>
     <a class="item" ng-click="vm.editAddress('home')">
       <div class="address-settings">
@@ -43,6 +43,10 @@
         <div class="email-phone-text">{{vm.user.phoneNumber}}</div>
         <div class="settings-right-btn-email-phone"></div>              
       </a>  
+  </div>
+  <div id="policies-container">
+      <div id="privacy-policy" ng-click="vm.openPolicy('privacy')">Privacy Policy</div>
+      <div id="cancellation-policy" ng-click="vm.openPolicy('cancellation')">Cancellation Policy</div>
   </div>
   </ion-content>
   <div class="settings-footer" ng-click="vm.toContactUs()">
