--- a/www/app/products/products.html
+++ b/www/app/products/products.html
@@ -18,15 +18,17 @@
 
 		  	<div class="price-deadline-container" ng-show="!product.appointment">
 				<div class="price-container">
-				  		<div class="dollar-sign">$</div>
-						<div class="product-price">{{product.price}}</div>
-				  	</div>
-				 <div class="deadline-msg">last chance to book this style {{product.deadlineText}}!</div>
-				 <button class="arrow-btn ion-ios-arrow-down" ng-click="vm.toProductDetails()"></button>
+			  		<div class="dollar-sign">$</div>
+					<div class="product-price">{{product.price}}</div>
+			  	</div>
+				<div class="deadline-msg">last chance to book this style {{product.deadlineText}}!</div>
+				<button class="arrow-btn ion-ios-arrow-down" ng-click="vm.toProductDetails()"></button>
 		  	</div>
 		  	<div class="fullscreen-image" ng-style="{'background-image':'url({{product.image}})'}">
 		  </ion-slide>
-		  <button id="products-booking-btn" ng-show="!product.appointment" class="primary-button" ng-click="vm.bookAppointment()">Book</button>
+		  <div class="static-footer product-button">
+		  	<button id="products-booking-btn" ng-show="!product.appointment" class="primary-button" ng-click="vm.bookAppointment()">Book</button>
+		  </div>
 		</ion-slide-box>
 		<button class="nav-settings-btn" ng-click="vm.toSettings()"></button>
   </ion-content>
