--- a/www/app/productDetails/product-details.html
+++ b/www/app/productDetails/product-details.html
@@ -5,7 +5,7 @@
             <div class="product-hashtags">{{vm.product.hashtags}}</div>
         </div>
     </div>
-  <ion-content style="margin-bottom:80px;" on-swipe-down="vm.toProducts()">
+  <ion-content style="padding-bottom:80px;" on-swipe-down="vm.toProducts()">
     <div class="instagram-container" ng-repeat="instagram in vm.instagrams">
     	<div class="image-container" ng-style="{'background-image':'url({{instagram.image}})'}">
     		<div class="user-info-container">
@@ -22,5 +22,7 @@
     	</div>
     </div>
   </ion-content>
+  <div class="static-footer product-button">
       <button id="product-details-confirm-btn" ng-disabled="vm.product.appointment"  class="primary-button" ng-click="vm.bookAppointment()">{{vm.product.appointment ? "Booked" : "Book"}}</button>
+  </div>
 </ion-view>
